--- a/index.html
+++ b/index.html
@@ -66,10 +66,6 @@
 				<div id="containIntro" style='margin:0px;width:100%; height: 100%;overflow: hidden;background: hsla(300,100%,0%,0.6); cursor: auto; position: relative; z-index: 7; opacity: 1;'>
 					<div id="menuholder" style='margin:0px;width:40%; height: 5%;overflow: hidden;background: hsla(300,100%,0%,0); cursor: auto; position: relative; z-index: 7; opacity: 1; transform: translate(-100%,-5%); left: 100%; top: 5%; '>
 						<div id="diveInM1" onclick="document.getElementById('slide11').scrollIntoView({behavior: 'smooth'});" target = "_self" style='margin:0px;overflow: hidden; position: relative; transition: background 0.5s; background: hsla(250,100%,50%,0); width: 30%; height: 100%;  border-color: hsla(260,100%,50%,0); cursor: pointer; display: inline-block;'>
-							
-							<div id="diveInTextM1" style='margin:0px;overflow: hidden;text-align: center; font-family: Calibri; font-size: 1.3vw; transform: translate(-50%,-50%); left: 50%; top: 50%; position: relative; color: hsla(185,100%,100%,1); '>
-								Projects
-							</div>
 						</div>
 						<div id="diveInM3" onclick="window.open('https://github.com/PSMITHULSOURAV/')" style='margin:0px;overflow: hidden; position: relative; transition: background 0.5s; background: hsla(250,100%,50%,0); width: 30%; height: 100%; border-color: hsla(260,100%,50%,0); cursor: pointer; display: inline-block;'>
 							
@@ -91,7 +87,7 @@
 				</div>
 			</div>
 
-			<div id='slide14' style='z-index:1; position: relative;  overflow: hidden; background: black; background-image: url(https://th.bing.com/th/id/OIP.xxovL10j6596zAGPdxIhOQHaER?w=318&h=183&c=7&o=5&pid=1.7); background-size: cover;'>
+			<div id='slide14' style='z-index:1; position: relative;  overflow: hidden; background: black; background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcRUTojh1Q9Hyn4_c028XogVdShVYenCUCIDIw&usqp=CAU); background-size: cover;'>
 				<div height="100%" width="100%" style='z-index:1; position: absolute; left: 0;right: 0;top:0; bottom: 0; '>
 					<svg id='slide14svg' height="100%" width="100%">
 					</svg>
