--- a/index.html
+++ b/index.html
@@ -1,9 +1,4 @@
 <!DOCTYPE HTML>
-<!--[if lt IE 7 ]> <html lang="en" class="ie ie6"> <![endif]--> 
-<!--[if IE 7 ]>	<html lang="en" class="ie ie7"> <![endif]--> 
-<!--[if IE 8 ]>	<html lang="en" class="ie ie8"> <![endif]--> 
-<!--[if IE 9 ]>	<html lang="en" class="ie ie9"> <![endif]--> 
-<!--[if !IE]><!--> <html lang="en"> <!--<![endif]-->
 <head>
 <meta charset="utf-8">
 <title>MITHUL SOURAV - Coming Soon!!!</title>
@@ -21,8 +16,21 @@
 		<div class="logo"><h1>PSMS</h1>	</div>
 		</div>
 	</div>
-	<h2>MY new site is coming soon!!!</h2>
+	<h2>My new site is coming soon!!!</h2>
     <strong>Stay tuned for something amazing</strong>	
+<div class="countdown styled"></div>
+</div>
+<div id="subscribe">
+	<h3>Stay in touch</h3>
+	<form action="" method="post" onsubmit="">
+		<p><input name="" value="Enter your e-mail" type="text" id=""/>
+		<input type="button" value="Submit"/></p>
+	</form>
+	<div id="socialIcons">
+		<ul> 
+			<li><a href="https://github.com/PSMITHULSOURAV" title="GITHUB" class="githubIcon"></a></li>
+		</ul>
+	</div>
 </div>
 
 <!--Scripts-->
