--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 		</ul>
 	</div>
 </div>
+<span class="tempBy">Template by: <a href="http://webthemez.com" alt="webthemez">WebThemez.com</a></span>
 
 <!--Scripts-->
 <script type="text/javascript" src="js/jquery-1.9.1.min.js"></script> 
