--- a/index.html
+++ b/index.html
@@ -1,28 +1,35 @@
-<!DOCTYPE HTML>
-<head>
-<meta charset="utf-8">
-<title>MITHUL SOURAV - Coming Soon!!!</title>
-<meta name="description" content="Ace Page under construction">
-<meta http-equiv="X-UA-Compatible" content="chrome=1">
-<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=PT+Sans+Narrow:regular,bold"> 
-<link rel="stylesheet" type="text/css" href="css/styles.css">
-</head>
+<!DOCTYPE html>
+<html>
+<title>W3.CSS Template</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
+<style>
+body,h1 {font-family: "Raleway", sans-serif}
+body, html {height: 100%}
+.bgimg {
+  background-image: url('/w3images/forestbridge.jpg');
+  min-height: 100%;
+  background-position: center;
+  background-size: cover;
+}
+</style>
+<body>
 
-<body id="home">
-
-<div id="Content" class="wrapper topSection">
-	<div id="Header">
-	<div class="wrapper">
-		<div class="logo"><h1>PSMS</h1>	</div>
-		</div>
-	</div>
-	<h2>My new site is coming soon!!!</h2>
-    <strong>Stay tuned for something amazing</strong>	
+<div class="bgimg w3-display-container w3-animate-opacity w3-text-white">
+  <div class="w3-display-topleft w3-padding-large w3-xlarge">
+    Logo
+  </div>
+  <div class="w3-display-middle">
+    <h1 class="w3-jumbo w3-animate-top">COMING SOON</h1>
+    <hr class="w3-border-grey" style="margin:auto;width:40%">
+    <p class="w3-large w3-center"><!-- Display the countdown timer in an element -->
 <p id="demo"></p>
 
 <script>
 // Set the date we're counting down to
-var countDownDate = new Date("Aug 29, 2021 15:00:00").getTime();
+var countDownDate = new Date("Aug 31, 2020 15:00:00").getTime();
 
 // Update the count down every 1 second
 var x = setInterval(function() {
@@ -50,10 +57,14 @@ var x = setInterval(function() {
   }
 }, 1000);
 </script>
-<!--Scripts-->
-<script type="text/javascript" src="js/jquery-1.9.1.min.js"></script> 
-<script type="text/javascript" src="js/jquery.countdown.js"></script>
-<script type="text/javascript" src="js/global.js"></script>
+</p>
+  </div>
+  <div class="w3-display-bottomleft w3-padding-large">
+    Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a>
+  </div>
+</div>
 
 </body>
 </html>
+
+
