--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <div class="w3-row-padding" style="margin:0 -16px">
       <div class="w3-half">
        <a href="https://github.com/PSMITHULSOURAV/Python-J-A-R-V-I-S">
-  <img src="https://th.bing.com/th/id/OIP.for9Rq_JO2jlZ_m2WtCjBAHaEK?w=277&h=180&c=7&o=5&dpr=1.5&pid=1.7" style="width:100%" alt="Jarvis||PERSONAL ASSITANT" height="100" width="100" />
+  <img src="https://th.bing.com/th/id/OIP.for9Rq_JO2jlZ_m2WtCjBAHaEK?w=277&h=180&c=7&o=5&dpr=1.5&pid=1.7" style="width:100%" alt="Jarvis||PERSONAL ASSISTANT" height="100" width="40" />
 </a>
       </div>
 
