--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@ h1 span:nth-child(14) {
 	<nav class="menu">
 <ul>
 <li><a href="/aboutme"><b>01.About</b></a></li>
-<li><a href="/projects"><b>02.Projects</b></a></li>
+<li><a href="/simulations"><b>02.Simulations</b></a></li>
 <li><a href="/contact"><b>03.Contact</b></a></li>
 <li><a href="/apps"><b>04.Apps</b></a></li>
 <li><a href="/resume"><b>05.Resume</b></a></li>
