--- a/index.html
+++ b/index.html
@@ -10,207 +10,8 @@ development.js"></script>
 	<link rel="shortcut icon" href="/ico.ico" />
 	<link href="https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Hanalei&display=swap" rel="stylesheet">
-<script>
-function start() {
-const rootElement =
-React.createElement("nav",{ classname : "menu" },
-React.createElement("ul", {classname : "menu" },
-React.createElement("li", { },
-React.createElement("a", {href : "/aboutme.html" }, "01.About Me")
-),
-React.createElement("li", { },
-React.createElement("a", {href : "/apps.html" }, "02.Apps")
-),
-React.createElement("li", { },
-React.createElement("a", {href : "/simulations.html" }, "03.Simulations")
-),
-React.createElement("li", { },
-React.createElement("a", {href : "/resume.html" }, "04.Resume")
-),
-React.createElement("li", { },
-React.createElement("a", {href : "/contact.html" }, "05.Contact")
-)
-)
-)
-ReactDOM.render(rootElement,
-document.getElementById("mainContainer")
-);
-}
-</script>
-<style type="text/css">
-      body {
-  background-color: #051622;
-}
-}
-/* CLOUDS */
-body:before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  width: 0;
-  height: 0;
-  margin: auto;
-  border-radius: 100%;
-  background: transparent;
-  display: block;
-  box-shadow: 0 0 150px 100px rgba(255, 255, 255, 0.6),
-    200px 0 200px 150px rgba(255, 255, 255, 0.6),
-    -250px 0 300px 150px rgba(255, 255, 255, 0.6),
-    550px 0 300px 200px rgba(255, 255, 255, 0.6),
-    -550px 0 300px 200px rgba(255, 255, 255, 0.6);
-}
-/* JUMP */
-h1 {
-  cursor: default;
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  width: 100%;
-  height: 100px;
-  margin: auto;
-  display: block;
-  text-align: center;
-}
-
-h1 span {
-  position: relative;
-  top: 20px;
-  display: inline-block;
-  -webkit-animation: bounce 0.3s ease infinite alternate;
-  font-size: 80px;
-  color: #DEB992;
-  text-shadow: 0 1px 0 #ccc, 0 2px 0 #ccc, 0 3px 0 #ccc, 0 4px 0 #ccc,
-    0 5px 0 #ccc, 0 6px 0 transparent, 0 7px 0 transparent, 0 8px 0 transparent,
-    0 9px 0 transparent, 0 10px 10px rgba(0, 0, 0, 0.4);
-}
-
-h1 span:nth-child(2) {
-  -webkit-animation-delay: 0.1s;
-}
-
-h1 span:nth-child(3) {
-  -webkit-animation-delay: 0.2s;
-}
-
-h1 span:nth-child(4) {
-  -webkit-animation-delay: 0.3s;
-}
-
-h1 span:nth-child(5) {
-  -webkit-animation-delay: 0.4s;
-}
-
-h1 span:nth-child(6) {
-  -webkit-animation-delay: 0.5s;
-}
-
-h1 span:nth-child(7) {
-  -webkit-animation-delay: 0.6s;
-}
-
-h1 span:nth-child(8) {
-  -webkit-animation-delay: 0.2s;
-}
-
-h1 span:nth-child(9) {
-  -webkit-animation-delay: 0.3s;
-}
-
-h1 span:nth-child(10) {
-  -webkit-animation-delay: 0.4s;
-}
-
-h1 span:nth-child(11) {
-  -webkit-animation-delay: 0.5s;
-}
-
-h1 span:nth-child(12) {
-  -webkit-animation-delay: 0.6s;
-}
-
-h1 span:nth-child(13) {
-  -webkit-animation-delay: 0.7s;
-}
-
-h1 span:nth-child(14) {
-  -webkit-animation-delay: 0.8s;
-}
-@-webkit-keyframes bounce {
-  100% {
-    top: -20px;
-    text-shadow: 0 1px 0 #ccc, 0 2px 0 #ccc, 0 3px 0 #ccc, 0 4px 0 #ccc,
-      0 5px 0 #ccc, 0 6px 0 #ccc, 0 7px 0 #ccc, 0 8px 0 #ccc, 0 9px 0 #ccc,
-      0 50px 25px rgba(0, 0, 0, 0.2);
-  }
-}
-nav{
-      display: block;
-      padding-top: 0.1%;
-      padding-left: 46%;
-      font-family: monospace;
-      font-size: 110%;
-      position: relative;
-      text-decoration: none;
-      font-size: 1.3em;
-     }
-li{
-              display: inline;
-              padding: 0.4em;
-     }
-ul {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-}
-     a{
-       text-decoration: none;
-       color: #1BA098;
-      }
-      /**custom scroll bar**/
-::-webkit-scrollbar {
-  width: 20px;
-}
-
-::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 5px grey; 
-  border-radius: 10px;
-}
- 
-::-webkit-scrollbar-thumb {
-  background: red; 
-  border-radius: 10px;
-}
-
-::-webkit-scrollbar-thumb:hover {
-  background: #b30000; 
-}
-  #snowflakeContainer {
-    position: absolute;
-    left: 0px;
-    top: 0px;
-    display: none;
-  }
-
-  .snowflake {
-    position: fixed;
-    background-color: #FFFFFF;
-    user-select: none;
-    z-index: 10000;
-    pointer-events: none;
-    border-radius: 50%;
-    width: 10px;
-    height: 10px;
-  }  
-  #aboutme {
-  position: relative;
-  background: rgb(0,0,0);
-  }   
-</style>
-
+<script src="https://psmithulsourav.github.io/content.js"></script>
+<link href="https://psmithulsourav.github.io/stylesheet.css" rel="stylesheet">
 </head>
 <body onLoad="start();">
 <div id="mainContainer"></div>	
@@ -235,178 +36,7 @@ ul {
   <span class="snowflake"></span>
 </div>
 
-<script>
-  // Array to store our Snowflake objects
-  var snowflakes = [];
-
-  // Global variables to store our browser's window size
-  var browserWidth;
-  var browserHeight;
-
-  // Specify the number of snowflakes you want visible
-  var numberOfSnowflakes = 150;
-
-  // Flag to reset the position of the snowflakes
-  var resetPosition = false;
-
-  // Handle accessibility
-  var enableAnimations = false;
-  var reduceMotionQuery = matchMedia("(prefers-reduced-motion)");
-
-  // Handle animation accessibility preferences 
-  function setAccessibilityState() {
-    if (reduceMotionQuery.matches) {
-      enableAnimations = false;
-    } else { 
-      enableAnimations = true;
-    }
-  }
-  setAccessibilityState();
-
-  reduceMotionQuery.addListener(setAccessibilityState);
-
-  //
-  // It all starts here...
-  //
-  function setup() {
-    if (enableAnimations) {
-      window.addEventListener("DOMContentLoaded", generateSnowflakes, false);
-      window.addEventListener("resize", setResetFlag, false);
-    }
-  }
-  setup();
-
-  //
-  // Constructor for our Snowflake object
-  //
-  function Snowflake(element, speed, xPos, yPos) {
-    // set initial snowflake properties
-    this.element = element;
-    this.speed = speed;
-    this.xPos = xPos;
-    this.yPos = yPos;
-    this.scale = 1;
-
-    // declare variables used for snowflake's motion
-    this.counter = 0;
-    this.sign = Math.random() < 0.5 ? 1 : -1;
-
-    // setting an initial opacity and size for our snowflake
-    this.element.style.opacity = (.1 + Math.random()) / 3;
-  }
-
-  //
-  // The function responsible for actually moving our snowflake
-  //
-  Snowflake.prototype.update = function () {
-    // using some trigonometry to determine our x and y position
-    this.counter += this.speed / 5000;
-    this.xPos += this.sign * this.speed * Math.cos(this.counter) / 40;
-    this.yPos += Math.sin(this.counter) / 40 + this.speed / 30;
-    this.scale = .5 + Math.abs(10 * Math.cos(this.counter) / 20);
-
-    // setting our snowflake's position
-    setTransform(Math.round(this.xPos), Math.round(this.yPos), this.scale, this.element);
-
-    // if snowflake goes below the browser window, move it back to the top
-    if (this.yPos > browserHeight) {
-      this.yPos = -50;
-    }
-  }
-
-  //
-  // A performant way to set your snowflake's position and size
-  //
-  function setTransform(xPos, yPos, scale, el) {
-    el.style.transform = `translate3d(${xPos}px, ${yPos}px, 0) scale(${scale}, ${scale})`;
-  }
-
-  //
-  // The function responsible for creating the snowflake
-  //
-  function generateSnowflakes() {
-
-    // get our snowflake element from the DOM and store it
-    var originalSnowflake = document.querySelector(".snowflake");
-
-    // access our snowflake element's parent container
-    var snowflakeContainer = originalSnowflake.parentNode;
-    snowflakeContainer.style.display = "block";
-
-    // get our browser's size
-    browserWidth = document.documentElement.clientWidth;
-    browserHeight = document.documentElement.clientHeight;
-
-    // create each individual snowflake
-    for (var i = 0; i < numberOfSnowflakes; i++) {
-
-      // clone our original snowflake and add it to snowflakeContainer
-      var snowflakeClone = originalSnowflake.cloneNode(true);
-      snowflakeContainer.appendChild(snowflakeClone);
-
-      // set our snowflake's initial position and related properties
-      var initialXPos = getPosition(50, browserWidth);
-      var initialYPos = getPosition(50, browserHeight);
-      var speed = 5 + Math.random() * 40;
-
-      // create our Snowflake object
-      var snowflakeObject = new Snowflake(snowflakeClone,
-        speed,
-        initialXPos,
-        initialYPos);
-      snowflakes.push(snowflakeObject);
-    }
-
-    // remove the original snowflake because we no longer need it visible
-    snowflakeContainer.removeChild(originalSnowflake);
-
-    moveSnowflakes();
-  }
-
-  //
-  // Responsible for moving each snowflake by calling its update function
-  //
-  function moveSnowflakes() {
-
-    if (enableAnimations) {
-      for (var i = 0; i < snowflakes.length; i++) {
-        var snowflake = snowflakes[i];
-        snowflake.update();
-      }      
-    }
-
-    // Reset the position of all the snowflakes to a new value
-    if (resetPosition) {
-      browserWidth = document.documentElement.clientWidth;
-      browserHeight = document.documentElement.clientHeight;
-
-      for (var i = 0; i < snowflakes.length; i++) {
-        var snowflake = snowflakes[i];
-
-        snowflake.xPos = getPosition(50, browserWidth);
-        snowflake.yPos = getPosition(50, browserHeight);
-      }
-
-      resetPosition = false;
-    }
-
-    requestAnimationFrame(moveSnowflakes);
-  }
-
-  //
-  // This function returns a number between (maximum - offset) and (maximum + offset)
-  //
-  function getPosition(offset, size) {
-    return Math.round(-1 * offset + Math.random() * (size + 2 * offset));
-  }
-
-  //
-  // Trigger a reset of all the snowflakes' positions
-  //
-  function setResetFlag(e) {
-    resetPosition = true;
-  }
-</script>
+<script src="https://psmithulsourav.github.io/snowflakes.js"></script>
 <!-- The core Firebase JS SDK is always required and must be listed first -->
 <script src="/__/firebase/7.19.1/firebase-app.js"></script>
 
