--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>P S Mithul Sourav|PROGRAMMER</title>
   <script crossorigin src="https://unpkg.com/react@16/umd/react.
 development.js"></script>
@@ -14,7 +16,17 @@ development.js"></script>
 <link href="https://psmithulsourav.github.io/stylesheet.css" rel="stylesheet">
 </head>
 <body onLoad="start();">
-<div id="mainContainer"></div>	
+<div id="mainContainer"></div>
+<header class="top-header">
+</header>
+
+<!--dust particel-->
+<div>
+  <div class="starsec"></div>
+  <div class="starthird"></div>
+  <div class="starfourth"></div>
+  <div class="starfifth"></div>
+</div>
 <div>
 <h1>
   <span>M</span>
@@ -32,11 +44,9 @@ development.js"></script>
   <span>V</span> 
 </h1>
 </div>
-<div id="snowflakeContainer">
-  <span class="snowflake"></span>
-</div>
 
-<script src="https://psmithulsourav.github.io/snowflakes.js"></script>
+
+
 <!-- The core Firebase JS SDK is always required and must be listed first -->
 <script src="/__/firebase/7.19.1/firebase-app.js"></script>
 
