--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@ development.js"></script>
 	<link rel="shortcut icon" href="/ico.ico" />
 	<link href="https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Hanalei&display=swap" rel="stylesheet">
-<script src="https://psmithulsourav.github.io/content.js"></script>
-<link href="https://psmithulsourav.github.io/stylesheet.css" rel="stylesheet">
+<script src="https://hitman-codes.github.io/content.js"></script>
+<link href="https://hitman-codes.github.io/stylesheet.css" rel="stylesheet">
 </head>
 <body onLoad="start();">
 <div id="mainContainer"></div>
